[package]
name = "risc0-helios-core"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { version = "0.6.12"}
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
hex = {version = "0.4.3"}
serde_with = {version = "3.4.0", features = ["hex"] }
serde = { version = "1.0.203"}
serde_json = { version = "1.0.125" }
consensus-core = { git = "https://github.com/a16z/helios" }
common = { git = "https://github.com/a16z/helios" }
alloy-sol-types = { version = "0.7.7" }
alloy-primitives = { version = "0.7.7" }
tokio = {  version = "1.40.0", optional = true, features = ["full"] }
helios = { git = "https://github.com/a16z/helios", optional = true }
reqwest = {version = "0.12.8", optional = true}
tree_hash = {version = "0.7.0", optional = true}

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ratankaliani/ethereum_hashing", branch = "main" }

[features]
host = [
    "tokio",
    "helios",
    "reqwest",
    "tree_hash"
]