[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
risc0-helios-core = {path = "../core", features = ["host"]}
clap = { version = "4.5.19", features = ["derive"] }
tokio = {version = "1.40.0", features = ["full"]}
anyhow = "1.0.89"
helios = { git = "https://github.com/a16z/helios"}
alloy-sol-types = {version = "0.7.7"}
dotenv = {version = "0.15.0"}
serde_cbor = "0.11.2"

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/staaason/ethereum_hashing.git" }
sha2-v0-9-9 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.9.9-risczero.0" }
sha2-v0-10-8 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-risczero.0" }

[features]
cuda = ["risc0-zkvm/cuda"]