[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
consensus-core = { git = "https://github.com/a16z/helios" }
common = { git = "https://github.com/a16z/helios" }
serde_cbor = { version = "0.11.2" }
risc0-helios-core = { path = "../../core" }
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
alloy-sol-types = { version = "0.7.7" }
alloy-primitives = { version = "0.7.7" }
hex = { version = "0.4.3" }
tree_hash = { version = "0.7.0"}

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/staaason/ethereum_hashing.git" }
sha2-v0-9-9 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.9.9-risczero.0" }
sha2-v0-10-8 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-risczero.0" }